# Eclipxse_beam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  desktop.yml  native-release.yml
beam-native/: Cargo.toml  README.md
beam-native/src/: backend.rs  companion.html  main.rs  webrtc_transport.rs
beam-native/ui/: app-window.slint  components.slint  design-tokens.slint
desktop/: main.cjs
public/: manifest.webmanifest  sw.js
scripts/: verify-webrtc.mjs
src/: App.tsx  gothic.css  main.tsx  styles.css  types.ts
src/components/: BeamLogo.tsx  CelestialSeal.tsx  Icon.tsx
src/hooks/: useBeamPeer.ts
src/lib/: format.test.ts  format.ts  transfer.test.ts  transfer.ts
